--- a/nxt_navigation/nxt_localization/ros/cfg/markers.cfg
+++ b/nxt_navigation/nxt_localization/ros/cfg/markers.cfg
@@ -3,20 +3,81 @@
 
 ###### robot patterns ########################
 
-# ROBOT 1
-1		### identifier, could also be robot_1
-data/4x4/4x4_42.patt
+#### WALL CORNER
+w1
+data/4x4/4x4_100.patt
 80.0
 0.0 0.0
 
-# ROBOT 2
-2
+
+#### OBSTACLES
+o1
 data/4x4/4x4_99.patt
 80.0
 0.0 0.0
 
-# ROBOT 3
-3
-data/4x4/4x4_78.patt
+o2
+data/4x4/4x4_98.patt
+80.0
+0.0 0.0
+
+### ROBOTS
+r1
+data/4x4/4x4_97.patt
+80.0
+0.0 0.0
+
+r2
+data/4x4/4x4_96.patt
+80.0
+0.0 0.0
+
+r3
+data/4x4/4x4_95.patt
+80.0
+0.0 0.0
+
+r4
+data/4x4/4x4_94.patt
+80.0
+0.0 0.0
+
+r5
+data/4x4/4x4_93.patt
+80.0
+0.0 0.0
+
+r6
+data/4x4/4x4_92.patt
+80.0
+0.0 0.0
+
+r7
+data/4x4/4x4_91.patt
+80.0
+0.0 0.0
+
+r8
+data/4x4/4x4_90.patt
+80.0
+0.0 0.0
+
+r9
+data/4x4/4x4_89.patt
+80.0
+0.0 0.0
+
+r10
+data/4x4/4x4_88.patt
+80.0
+0.0 0.0
+
+r11
+data/4x4/4x4_87.patt
+80.0
+0.0 0.0
+
+r12
+data/4x4/4x4_86.patt
 80.0
 0.0 0.0
